<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaribbeanFragment">
    <LinearLayout
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/normalFontSize"
            android:text="@string/caribbean" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/normalFontSize"
            android:id="@+id/price"
            android:text="@string/cruise_price_caribbean" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/normalFontSize"
            android:id="@+id/visiting_places"
            android:text="@string/visiting_places_caribbean" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/normalFontSize"
            android:id="@+id/duration"
            android:text="@string/duration_caribbean" />
        <ImageView
            android:layout_marginTop="20px"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/caribbean"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/small_description_style"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/checkbox_text"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cruise_type"
            android:text="@string/caribbean"/>
        <Button
            android:onClick="chooseMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/titleFontSize"
            android:text="Next"/>
    </LinearLayout>

</FrameLayout>